--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,21 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap') ;
-
 .header-container {
   align-items: center;
   background-color: blueviolet;
+  border-bottom: whitesmoke 1px solid;
   display: flex;
-  flex: 1;
-  flex-wrap: wrap;
   gap: 1rem;
-  justify-content: space-evenly;
-  padding: 2rem;
+  justify-content: space-around;
+  max-height: 3rem;
+  padding: 1rem;
+  width: 100%;
 }
 
 p {
-  color: whitesmoke;
-  font-family: '"Inter' , sans-serif;
-  font-size: 1.5rem;
-  font-style: italic;
-  font-weight: 200;
   text-align: center;
+}
+
+.name {
+  font-size: 1.1rem;
+}
+
+.score {
+  font-size: 1.5rem;
+}
+
+.header-profile-img {
+  width: 5%;
 }
