--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -70,21 +70,22 @@ h1 {
 }
 
 .btn {
-  background-color: blueviolet;
+  background-color: lightblue;
   border: blueviolet solid 1px;
   border-radius: 7px;
-  color: lightblue;
+  color: #023047;
   cursor: pointer;
   display: block;
   font-family: '"Inter' , sans-serif;
   height: 30px;
   padding: 7px 0;
+  transition: all 0.3s ease-in-out;
   width: 100%;
 }
 
 .btn:hover {
-  background-color: lightblue;
-  color: blueviolet;
+  background-color: blueviolet;
+  color: lightblue;
   cursor: pointer;
 }
 
@@ -98,6 +99,7 @@ h1 {
   font-family: '"Inter' , sans-serif;
   height: 30px;
   padding: 7px 0;
+  transition: all 0.3s ease-in-out;
   width: 100%;
 }
 
@@ -107,5 +109,6 @@ h1 {
 }
 
 .btn-play:active {
-  background-color: blueviolet;
+  letter-spacing: 4px;
+  transition: all 0.3s ease-in-out;
 }
